--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     let h = "<table>" +
                         "<tr><td>Abbreviation</td><td>" + r.abv + "</td></tr>" +
                         "<tr><td>Link</td><td><a target='_blank' href='" + r.url_link + "'>" + r.url_link + "</a></td></tr>" +
-                        "<tr><td>Stats Link</td><td><a target='_blank' href='" + r.stats_link +  "'>" + r.stats_link + "</a></td></tr>" +
+                        "<tr><td>Stats Link</td><td><a target='_blank' href='" + r.stats_ui_link +  "'>" + r.stats_link + "</a></td></tr>" +
                         "</table>";
                     $("#newUrlResults").append(h);
                 });
