fix parsing of output aka reason number a billion why Eric doesn't ui

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Url Shortener</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 <body>
 <h2>Add Url</h2>
@@ -19,16 +19,15 @@
             const u = $("#newUrl").val();
             const posting = $.post("/", '"' + u + '"');
             posting.done( function ( data ) {
-                const r = $.parseJSON(data);
-                    let h = "<hr><table>" +
-                        "<tr><td>Abbreviation</td><td>" + r.abv + "</td></tr>" +
-                        "<tr><td>Link</td><td><a target='_blank' href='" + r.url_link + "'>" + r.url_link + "</a></td></tr>" +
-                        "<tr><td>Stats Link</td><td><a target='_blank' href='" + r.stats_ui_link +  "'>" + r.stats_link + "</a></td></tr>" +
-                        "<tr><td>Original Url</td><td><a target='_blank' href='" + u +  "'>" + u + "</a></td></tr>" +
-                        "</table>";
-                    $("#newUrlResults").append(h);
-                    $("#newUrl").val('');
-                });
+                let h = "<hr><table>" +
+                    "<tr><td>Abbreviation</td><td>" + data.abv + "</td></tr>" +
+                    "<tr><td>Link</td><td><a target='_blank' href='" +data.url_link + "'>" + data.url_link + "</a></td></tr>" +
+                    "<tr><td>Stats Link</td><td><a target='_blank' href='" + data.stats_ui_link +  "'>" + data.stats_link + "</a></td></tr>" +
+                    "<tr><td>Original Url</td><td><a target='_blank' href='" + u +  "'>" + u + "</a></td></tr>" +
+                    "</table>";
+                $("#newUrlResults").append(h);
+                $("#newUrl").val('');
+            });
             posting.fail( function ( data ) {
                 console.log(data);
                 $("#newUrlResults").append("Error: " + data.responseText);
